Add images to all pages

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
   <welcome name="Delgada" link="https://delgada.dev"></welcome>
   <p>Get started by editing <code>src/app.html</code></p>
   <counter></counter>
+  <img src="./assets/poppy.jpg" alt="Poppy the puppy!" />
   <p id="docs">
     Read the docs at <a href="https://delgada.dev/docs">delgada.dev/docs</a>.
   </p>
@@ -16,7 +17,6 @@
 
 <style>
   main {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -38,5 +38,11 @@
   #docs {
     position: fixed;
     bottom: 10px;
+  }
+
+  img {
+    width: 30%;
+    height: auto;
+    margin: 2rem 0 6rem 0;
   }
 </style>
