--- a/src/pages/about/app.html
+++ b/src/pages/about/app.html
@@ -24,6 +24,7 @@
       HTML, CSS, and JavaScript that can be organized and structured in a way
       that is far more composable and easy to reason about.
     </p>
+    <img src="./assets/poppy.jpg" alt="Poppy the puppy!" />
   </section>
 </main>
 
@@ -60,5 +61,11 @@
   .code-block span {
     line-height: 1.5rem;
     color: rgb(13, 82, 40);
+  }
+
+  img {
+    width: 40%;
+    height: auto;
+    margin: 4rem 0;
   }
 </style>
